--- a/scss/form.scss
+++ b/scss/form.scss
@@ -2,7 +2,7 @@
 @use 'mixins' as *;
 .form {
     padding: 40px;
-    max-width: 376px;
+    max-width: 100%;
     border: 1px solid #D7DEE8;
     border-radius: var(--border-radius-small);
     background-color: var(--color-white);
