--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,2 +1,70 @@
 /*----------------------------------contacts--------------------------------*/
+.contacts h3 {
+  font-weight: 700;
+  font-size: clamp(18px, 1.3888888889vw, 20px);
+  line-height: 150%;
+}
+.contacts__top {
+  border: 1px solid #D7DEE8;
+  border-radius: 20px;
+  padding: 40px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-bottom: 50px;
+}
+.contacts__top h3 {
+  margin-bottom: 20px;
+}
+.contacts__top .messengers {
+  justify-content: start;
+}
+.contacts__top a {
+  transition: all 0.3s;
+}
+@media (hover: hover) {
+  .contacts__top a:hover {
+    transition: all 0.3s;
+    color: var(--color-primary);
+  }
+}
+@media (max-width: 768px) {
+  .contacts__top {
+    flex-wrap: wrap;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+}
+.contacts__block {
+  flex-basis: 310px;
+}
+.contacts__body {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 30px;
+}
+@media (max-width: 768px) {
+  .contacts__body {
+    flex-wrap: wrap;
+  }
+}
+.contacts__form {
+  flex-basis: 450px;
+}
+.contacts__form .form {
+  max-width: 100%;
+}
+@media (max-width: 768px) {
+  .contacts__form {
+    flex-basis: 100%;
+  }
+}
+.contacts__map {
+  flex-basis: 930px;
+}
+.contacts__map iframe {
+  border-radius: 20px;
+}
+
 /*----------------------------------contacts--------------------------------*/
