--- a/css/news.css
+++ b/css/news.css
@@ -1,2 +1,62 @@
 /*----------------------------------news--------------------------------*/
+.news__filter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+@media (max-width: 768px) {
+  .news__filter {
+    margin-bottom: 20px;
+  }
+}
+.news__date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.news__body {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 60px 30px;
+}
+@media (max-width: 768px) {
+  .news__body {
+    grid-template-columns: 1fr;
+  }
+}
+.news__block img {
+  border-radius: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.news__block time {
+  display: block;
+  margin-bottom: 30px;
+}
+.news__block h3 {
+  margin-bottom: 20px;
+  font-family: var(--font-unbounded);
+}
+.news__block p {
+  font-size: 18px;
+  line-height: 150%;
+  font-size: clamp(16px, 1.25vw, 18px);
+}
+.news .dropdown {
+  flex-basis: 300px;
+}
+.news__link {
+  margin: auto;
+  max-width: 390px;
+}
+.news__link .button {
+  display: block;
+  margin-top: 40px;
+}
+
 /*----------------------------------news--------------------------------*/
