--- a/css/select.css
+++ b/css/select.css
@@ -1,41 +1,43 @@
 /*----------------------------------select--------------------------------*/
 .dropdown {
   position: relative;
+  max-width: 330px;
 }
 .dropdown__button {
   position: relative;
   display: block;
   text-align: left;
-  border-radius: 5px;
-  font-weight: 700;
-  padding: 0px 20px 0px 0px;
+  border-radius: 10px;
+  padding: 20px;
   background-color: inherit;
-  color: var(--color-primary);
+  border: 1px solid var(--color-gray);
+  width: 100%;
+  font-size: clamp(14px, 1.1111111111vw, 16px);
 }
 .dropdown__button::after, .dropdown__button::before {
   content: "";
   position: absolute;
-  top: 35%;
-  right: 0px;
+  top: 45%;
+  right: 20px;
   transform: translateY(-50%);
   width: 2px;
   height: 8px;
   border-radius: 2px;
-  background-color: var(--color-primary);
+  background-color: var(--color-black);
   pointer-events: none;
   transform: rotate(45deg);
 }
 .dropdown__button::before {
-  right: 5px;
+  right: 25px;
   transform: rotate(-45deg);
 }
 .dropdown__list {
   display: none;
   position: absolute;
   overflow: hidden;
-  width: 200px;
+  width: 100%;
   left: 0;
-  top: 20px;
+  top: 65px;
   z-index: 1;
   background: #F0F5F6;
   padding: 16px;
@@ -47,13 +49,10 @@
 .dropdown__list_item {
   border-bottom: 0;
   cursor: pointer;
-  font-size: clamp(11px, 0.9027777778vw, 13px);
+  font-size: clamp(14px, 1.1111111111vw, 16px);
 }
 .dropdown__list_item:not(:last-child) {
   margin-bottom: 10px;
-}
-.dropdown__list_item:hover {
-  color: var(--color-primary);
 }
 .dropdown__input_hidden {
   display: none;
