--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -11,6 +11,17 @@ body {
     background: var(--color-white);
     line-height: 120%;
 }
+h1 {
+    font-weight: 700;
+    @include fluid-text(24, 44);
+    line-height: 120%;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-family: var(--font-unbounded);
+    @include mobile {
+        margin-bottom: 24px;
+    }
+}
 h2 {
     font-family: var(--font-unbounded);
     font-weight: 700;
@@ -158,42 +169,58 @@ section {
     }
 }
 .list-mark {
-    ul {
-        li {
-            margin-bottom: 12px;
-            padding-left: 40px;
-            position: relative;
-            &::before,
-            &::after {
-                position: absolute;
-                content: '';
-                width: 2px;
-                height: 10px;
-                top: 5px;
-                left: 20px;
-                background-color: var(--color-primary);
-                transform: rotate(45deg);
-            }
-            &::before {
-                width: 2px;
-                height: 6px;
-                top: 8px;
-                left: 15px;
-                transform: rotate(-45deg);
-            }
+    li {
+        margin-bottom: 12px;
+        padding-left: 40px;
+        position: relative;
+        &::before,
+        &::after {
+            position: absolute;
+            content: '';
+            width: 2px;
+            height: 10px;
+            top: 5px;
+            left: 20px;
+            background-color: var(--color-primary);
+            transform: rotate(45deg);
         }
-        margin-bottom: 40px;
+        &::before {
+            width: 2px;
+            height: 6px;
+            top: 8px;
+            left: 15px;
+            transform: rotate(-45deg);
+        }
     }
+    margin-bottom: 40px;
 }
 .list-number {
-    ol {
-        margin-left: 20px;
-        li {
-            margin-bottom: 12px;
-            &::marker {
-                color: var(--color-primary);
-                font-weight: 600;
-            }
+    margin-left: 20px;
+    li {
+        margin-bottom: 12px;
+        &::marker {
+            color: var(--color-primary);
+            font-weight: 600;
+        }
+    }
+}
+.list-points {
+    margin-left: 20px;
+    li {
+        color: var(--color-primary);
+        padding-left: 15px;
+        position: relative;
+        margin-bottom: 10px;
+        text-decoration: underline;
+        &::before {
+            position: absolute;
+            content: '';
+            width: 5px;
+            height: 5px;
+            top: 7px;
+            left: 0;
+            background-color: var(--color-primary);
+            border-radius: 50%;
         }
     }
 }
