--- a/scss/news.scss
+++ b/scss/news.scss
@@ -1,4 +1,64 @@
 /*----------------------------------news--------------------------------*/
 @use 'mixins' as *;
+.news {
+    &__filter {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+        flex-wrap: wrap;
+        margin-bottom: 40px;
+        @include mobile {
+            margin-bottom: 20px;
+        }
+    }
+    &__date {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+        cursor: pointer;
+    }
+    &__body {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        gap: 60px 30px;
+        @include mobile {
+            grid-template-columns: 1fr;
+        }
+    }
+    &__block {
+        img {
+            border-radius: 20px;
+            margin-bottom: 20px;
+            width: 100%;
+        }
+        time {
+            display: block;
+            margin-bottom: 30px;
+        }
+        h3 {
+            margin-bottom: 20px;
+            font-family: var(--font-unbounded);
+        }
+        p {
+            font-size: 18px;
+            line-height: 150%;
+            @include fluid-text(16, 18);
+        }
+    }
+    .dropdown {
+        flex-basis: 300px;
+    }
+    &__link {
+        margin: auto;
+        max-width: 390px;
+        .button {
+            display: block;
+            margin-top: 40px;
+        }
+    }
+}
+
 
 /*----------------------------------news--------------------------------*/
