--- a/scss/select.scss
+++ b/scss/select.scss
@@ -2,41 +2,43 @@
 @use 'mixins' as *;
 .dropdown {
     position: relative;
+    max-width: 330px;
     &__button {
         position: relative;
         display: block;
         text-align: left;
-        border-radius: 5px;
-        font-weight: 700;
-        padding: 0px 20px 0px 0px;
+        border-radius: 10px;
+        padding: 20px;
         background-color: inherit;
-        color: var(--color-primary);
+        border: 1px solid var(--color-gray);
+        width: 100%;
+        @include fluid-text(14, 16);
         &::after,
         &::before {
             content: '';
             position: absolute;
-            top: 35%;
-            right: 0px;
+            top: 45%;
+            right: 20px;
             transform: translateY(-50%);
             width: 2px;
             height: 8px;
             border-radius: 2px;
-            background-color: var(--color-primary);
+            background-color: var(--color-black);
             pointer-events: none;
             transform: rotate(45deg);
         }
           &::before {
-            right: 5px;
+            right: 25px;
             transform: rotate(-45deg);
         }
-      }
-      &__list {
+    }
+    &__list {
         display: none;
         position: absolute;
         overflow: hidden;
-        width: 200px;
+        width: 100%;
         left: 0;
-        top: 20px;
+        top: 65px;
         z-index: 1;
         background: #F0F5F6;
         padding: 16px;
@@ -47,12 +49,9 @@
         &_item {
             border-bottom: 0;
             cursor: pointer;
-            @include fluid-text(11, 13);
+            @include fluid-text(14, 16);
             &:not(:last-child) {
                 margin-bottom: 10px;
-            }
-            &:hover {
-                color: var(--color-primary);
             }
         }
       }
