--- a/scss/sliders.scss
+++ b/scss/sliders.scss
@@ -14,5 +14,18 @@
 .swiper-button-prev::after {
    display: none;
 }
-
+.article-slider {
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 40px;
+  .swiper-button-prev,
+  .swiper-button-next {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    border-radius: 10px;
+    width: 52px;
+    height: 52px;
+    padding: 15px;
+  }
+}
 /*---------------------------------------sliders----------------------------*/
